Copyright © 2020 Hewlett Packard Enterprise.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.5.0
-------------
* Build
  + Add --with-cuda=<dir> to specify the CUDA installation path
    (and its NVML and OpenCL components) without environment variables.
    Thanks to Andrea Bocci for the suggestion.


Version 2.4.0
-------------
* API
  + Add hwloc/cpukinds.h for reporting information about hybrid CPUs.
    - Use Linux cpufreq frequencies to rank cores by efficiency.
    - Use x86 CPUID hybrid leaf and future Linux kernels sysfs CPU type
      files to identify Intel Atom and Core cores.
    - Use the Windows native EfficiencyClass to separate kinds.
* Backends
  + Properly handle Linux kernel 5.10+ exposing ACPI HMAT information
    with knowledge of Generic Initiators.
* Tools
  + lstopo has new --cpukinds and --no-cpukinds options for showing
    CPU kinds or not in textual and graphical modes respectively.
  + hwloc-calc has a new --cpukind option for filtering PUs by kind.
  + hwloc-annotate has a new cpukind command for modifying CPU kinds.
* Misc
  + Fix hwloc_bitmap_nr_ulongs(), thanks to Norbert Eicker.
  + Add a documentation section about
    "Topology Attributes: Distances, Memory Attributes and CPU Kinds".
  + Silence some spurious warnings in the OpenCL backend and when showing
    process binding with lstopo --ps.


Version 2.3.0
-------------
* API
  + Add hwloc/memattrs.h for exposing latency/bandwidth information
    between initiators (CPU sets for now) and target NUMA nodes,
    typically on heterogeneous platforms.
    - When available, bandwidths and latencies are read from the ACPI HMAT
      table exposed by Linux kernel 5.2+.