@@ -110,6 +110,9 @@
     <ClInclude Include="..\..\include\hwloc\cpukinds.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\include\hwloc\windows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\include\hwloc\plugins.h">
       <Filter>Header Files</Filter>
     </ClInclude>
