@@ -19,6 +19,8 @@ bug fixes (and other actions) for each version of hwloc since version
 
 Version 2.5.0
 -------------
+* API
+  + Add hwloc/windows.h to query Windows processor groups.
 * Build
   + Add --with-cuda=<dir> to specify the CUDA installation path
     (and its NVML and OpenCL components) without environment variables.
